# jacobian-lens-research-202607a

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
blog/: example.md
blog/j-space-reports-sae-features/: index.md
blog/jspace-audit/: index.md
blog/lens-demo/: index.md
blog/sae-workspace-steering/: index.md
projects/features-as-rewards-replication/: .gitignore  ADJUDICATION.md  FEASIBILITY.md  GROUNDING.md  PROPOSAL.md  PROTOCOL.md  README.md  background.md
projects/features-as-rewards-replication/common/: acts.py  data.py  readers.py  sae.py
projects/features-as-rewards-replication/experiments/gemma3_agreement/: README.md  pod_gemma3.sh  run_agreement.py
projects/features-as-rewards-replication/experiments/gemma3_labeling/: analyze_jury_readers.py  build_hf_release.py  extract_entities_v2.py  grade.py  jury.py  jury_gemma3.py  pod_gemma3_gen_v2.sh  (+2 more)
projects/features-as-rewards-replication/figures/: build_figs.py
projects/features-as-rewards-replication/grounding/: build_wiki_index.py  llm.py  retrieve.py  serper.py
projects/features-as-rewards-replication/manifests/: FREEZE.txt  arms_and_costs.json  llama31_8b.json
projects/jacobian-lens-and-identifiability/: DATA.md  README.md  TODO.md  background.md  expert-commentary.md  hypotheses.md  related-work.md  writeup.md
projects/jacobian-lens-and-identifiability/common/: __init__.py  cka.py  metrics.py  synth.py
shared/: infra.md
shared/literature/: README.md  llm-subjective-experience-berg-2510.24797.md
shared/researchers/: README.md  handles.yaml
shared/runpod/: README.md  launch.py
(+245 files in other folders)
